--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
 			<artifactId>json-path</artifactId>
 			<version>5.4.0</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/net.lingala.zip4j/zip4j -->
+		<dependency>
+			<groupId>net.lingala.zip4j</groupId>
+			<artifactId>zip4j</artifactId>
+			<version>2.11.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<properties>
