--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 			<version>2.11.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>jakarta.mail</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<properties>
