--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 			<version>6.14.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>5.0.9</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
